--- a/CloakedUI/CloakedUI.csproj
+++ b/CloakedUI/CloakedUI.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Cloaked\Cloaked.csproj" />
+    <ProjectReference Include="..\..\Cloaked\Cloaked.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
